force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationPrivate__c/Apttus_Base2__UIComponentConfigurationPrivate__c.object-meta.xml
<CustomObject>
    <description>Saved view for standard object which will store List of fields, search filters, freeze column, group etc for the grid.</description>
    <label>Apttus UI Component Config Private</label>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apttus UI Component Config Private</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>