force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationPrivate__c/fields/Apttus_Base2__Config__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__Config__c</fullName>
    <description>Configuration for grid and other components. The format is JSON.</description>
    <label>Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>