force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationPrivate__c/fields/Apttus_Base2__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__ConfigurationId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Component Configuration</label>
    <referenceTo>Apttus_Base2__UIComponentConfiguration__c</referenceTo>
    <relationshipLabel>Component Configuration</relationshipLabel>
    <relationshipName>ComponentConfiguration</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>