force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationPrivate__c/fields/Apttus_Base2__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>default view for each user</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>