force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationPrivate__c/listViews/Apttus_Base2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Base2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Base2__IsDefault__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>